0.77
 * RealmResults.sort() now has better error reporting.
 * Lenient UTF-8 to UTF-16 transcoding by inserting replacement characters.
 * Adding more logging capabilities at the JNI level.
 * Added proper encryption support. NOTE: The key has been increased from 32 bytes to 64 bytes (see example).
 * Fixed bug when doing queries on the elements of a RealmList, ie. like Realm.where(Foo.class).getBars().where().equalTo("name").
 * Throw NoSuchMethodError when RealmResults.indexOf() is called, since it's not implemented yet.
 * Adding more precise imports in proxy classes to avoid ambiguous references.

0.76.0
 * RealmObjects can now be imported using JSON.
 * Gradle wrapper updated to support Android Studio 1.0.
 * Bug fixed in RealmObject.equals() so it now correctly compares two objects from the same Realm.
 * Realm class is now marked as final.
 * Replaced concurrency example with a better thread example.
 * Allow to add/remove RealmChangeListeners in RealmChangeListeners.
 * Upgrading to core 0.87.0 (encryption support, API changes).
 * Bug fixed in Realm crashing for receiving notifications after close().
 * Close the Realm instance after migrations.
 * Added a check to deny the writing of objects outside of a transaction.

0.75.1 (03 December 2014)
  * Changing sort to be an in-place method.
  * Renaming SORT_ORDER_DECENDING to SORT_ORDER_DESCENDING.
  * Adding sorting functionality to allObjects() and findAll().
  * Bug fixed: when querying a date column with equalTo(), it would act as lessThan()

0.75.0 (28 Nov 2014)
  * Realm now implements Closeable, allowing better cleanup of native resources
  * Adding writeCopyTo() and compactRealmFile() to write and compact a Realm to a new file.
  * RealmObject.toString(), equals() and hashCode() now support models with cyclic references.
  * RealmResults.iterator() and listIterator() now correctly iterates the results when using remove().
  * Bug fixed in Exception text when field names was not matching the database